Fix disconnect button out of screen

--- a/front/src/pages/Profile.css
+++ b/front/src/pages/Profile.css
@@ -278,7 +278,7 @@
   display: flex;
   flex-direction: column;
   position: relative;
-  height: 100%;
+  /* height: 100%; */
 }
 
 @media only screen and (max-device-width : 768px) {
